--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
   postgres:
     image: postgres:15-alpine
     environment:
-      POSTGRES_DB: gergy_knowledge
-      POSTGRES_USER: gergy_user
-      POSTGRES_PASSWORD: gergy_password
+      POSTGRES_DB: ${POSTGRES_DB:-gergy_knowledge}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./shared/database/init.sql:/docker-entrypoint-initdb.d/init.sql
@@ -15,7 +15,7 @@ services:
       - "5432:5432"
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U gergy_user -d gergy_knowledge"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB:-gergy_knowledge}"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -41,7 +41,7 @@ services:
       context: .
       dockerfile: servers/financial/Dockerfile
     environment:
-      - DATABASE_URL=postgresql://gergy_user:gergy_password@postgres:5432/gergy_knowledge
+      - DATABASE_URL=${DATABASE_URL}
       - REDIS_URL=redis://redis:6379
       - DOMAIN_NAME=financial
       - DAILY_BUDGET_LIMIT=15.0
@@ -61,7 +61,7 @@ services:
       context: .
       dockerfile: servers/family/Dockerfile
     environment:
-      - DATABASE_URL=postgresql://gergy_user:gergy_password@postgres:5432/gergy_knowledge
+      - DATABASE_URL=${DATABASE_URL}
       - REDIS_URL=redis://redis:6379
       - DOMAIN_NAME=family
       - DAILY_BUDGET_LIMIT=10.0
@@ -81,7 +81,7 @@ services:
       context: .
       dockerfile: servers/lifestyle/Dockerfile
     environment:
-      - DATABASE_URL=postgresql://gergy_user:gergy_password@postgres:5432/gergy_knowledge
+      - DATABASE_URL=${DATABASE_URL}
       - REDIS_URL=redis://redis:6379
       - DOMAIN_NAME=lifestyle
       - DAILY_BUDGET_LIMIT=8.0
@@ -101,7 +101,7 @@ services:
       context: .
       dockerfile: servers/professional/Dockerfile
     environment:
-      - DATABASE_URL=postgresql://gergy_user:gergy_password@postgres:5432/gergy_knowledge
+      - DATABASE_URL=${DATABASE_URL}
       - REDIS_URL=redis://redis:6379
       - DOMAIN_NAME=professional
       - DAILY_BUDGET_LIMIT=12.0
@@ -121,7 +121,7 @@ services:
       context: .
       dockerfile: servers/home/Dockerfile
     environment:
-      - DATABASE_URL=postgresql://gergy_user:gergy_password@postgres:5432/gergy_knowledge
+      - DATABASE_URL=${DATABASE_URL}
       - REDIS_URL=redis://redis:6379
       - DOMAIN_NAME=home
       - DAILY_BUDGET_LIMIT=8.0
@@ -139,7 +139,7 @@ services:
   grafana:
     image: grafana/grafana:10.2.0
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=gergy_admin
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-admin}
     ports:
       - "3000:3000"
     volumes:
